# reverse-engineering-agent

./: .gitignore  Dockerfile.api  Dockerfile.frontend  Makefile  Makefile.mk  README.md  cloudbuild.api.yaml  cloudbuild.frontend.yaml  deploy.sh  graph.html  pyproject.toml  start.sh
data/queries/: completed_sql_files.txt
src/: config.yaml  main.py
src/agents/: env.sh
src/agents/config/: settings.py
src/agents/shared_libraries/: bq_utils.py
src/agents/tools/: create_data_model.py  create_excel_report.py  sql_analysis.py
src/config/: load_env.py  settings.py
src/frontend/: app.py
