[tool.poetry]
name = "reverse-engineering-agent"
version = "0.1.0"
description = "An agent for reverse-engineering data models from SQL code."
authors = ["Your Name <you@example.com>"] # Replace with your name and email
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12" # Adjust Python version as needed
vertexai = "^0.9.0" # Use an appropriate version, check PyPI for the latest
pandas = "^2.0.0" # Use an appropriate version
google-cloud-storage = "^2.0.0" # Use an appropriate version

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0" # Example dev dependency

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
